force-app/main/default/objects/Contact/fields/isGet5__c.field-meta.xml
<CustomField>
    <fullName>isGet5__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isGet5</label>
    <type>Checkbox</type>
</CustomField>