force-app/main/default/objects/Contact/fields/isGit2__c.field-meta.xml
<CustomField>
    <fullName>isGit2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isGit2</label>
    <type>Checkbox</type>
</CustomField>