force-app/main/default/objects/Contact/fields/isGit3__c.field-meta.xml
<CustomField>
    <fullName>isGit3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isGit3</label>
    <type>Checkbox</type>
</CustomField>