force-app/main/default/objects/Contact/fields/isGit4__c.field-meta.xml
<CustomField>
    <fullName>isGit4__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isGit4</label>
    <type>Checkbox</type>
</CustomField>