force-app/main/default/objects/Contact/fields/isGitField__c.field-meta.xml
<CustomField>
    <fullName>isGitField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isGitField</label>
    <type>Checkbox</type>
</CustomField>