force-app/main/default/objects/Contact/fields/isNewContact__c.field-meta.xml
<CustomField>
    <fullName>isNewContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isNewContact</label>
    <type>Checkbox</type>
</CustomField>