force-app/main/default/objects/Contact/fields/isNewDate__c.field-meta.xml
<CustomField>
    <fullName>isNewDate__c</fullName>
    <label>isNewDate</label>
    <type>Date</type>
</CustomField>